# sherlock-holmes.ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
sherlock/: api.py  cli.py  config.py  models.py
sherlock/agents/: conductor.py  reporter.py  researcher.py
sherlock/tools/: documents.py  telegram.py  web.py
tests/: test_models.py
